examples/test/testpolicy317.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy317
  namespace: namespace120
spec:
  podSelector:
    matchLabels:
      key40: value35
      key33: value45
      key21: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value28
          key42: value13
          key35: value2
      podSelector:
        matchLabels:
          key34: value12
          key1: value2
          key48: value24
